# Pioneer-Enterpises

./: .env.example  .gitignore  DESKTOP.md  README.md  ROADMAP.md  index.html  package.json  render.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: backend-ci.yml  tauri-desktop.yml
server/: .env.example  README.md  package.json  vitest.config.ts
server/prisma/: schema.prisma
server/src/: app.ts  server.ts
server/src/config/: env.ts
server/src/controllers/: admin.controller.ts  public.controller.ts
server/src/lib/: auth.ts  logger.ts
server/src/middleware/: authenticate.ts  errorHandler.ts  rateLimiters.ts  requestContext.ts
server/src/routes/: admin.ts  auth.ts  public.ts
server/src/schemas/: admin.ts  public.ts
server/src/services/: customer.service.ts  property.service.ts  (+2 more)
src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/admin/: routes.tsx
src/pages/: Home.tsx
src/styles/: admin-auth.css  admin.css  calendar.css  contacts.css  customers.css  dashboard-customizer.css  dashboard-form-settings.css  debug-toolbar.css  estimates.css  expenses.css  forms.css  global.css  history.css  home-logo.css  home.css  jobs.css  landscaping-account.css  landscaping-auth.css  landscaping-customer-pages.css  landscaping-pages.css  landscaping.css  metrics.css  notifications.css  placeholders.css  service-requests.css  settings.css  variables.css  weekly-snapshot.css
src/website/: routes.tsx
(+122 files in other folders)
