[package]
name = "pioneer-enterprises-admin"
version = "0.1.0"
description = "Desktop administration panel for Pioneer Enterprises"
authors = ["Pioneer Enterprises"]
edition = "2021"

[lib]
name = "pioneer_enterprises_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
